update: add details
