# openapi.yaml
@@ -92,10 +92,10 @@ components:
           type: integer
           description: rating by the user
           example: 4
-        relativeTimeDescription:
+        time:
           type: string
+          format: date-time
           description: when the review was written
-          example: 1年前
         text:
           type: string
           description: the main text of the review
@@ -131,8 +131,6 @@ components:
           example: 3.7
     RestaurantDetail:
       type: object
-      required:
-        - photoUrls
       properties:
         placeId: 
           type: string
@@ -147,22 +145,6 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/Review'
-        servesBeer:
-          type: boolean
-        servesBreakfast:
-          type: boolean
-        servesBranch:
-          type: boolean
-        servesDinner:
-          type: boolean
-        servesLunch:
-          type: boolean
-        servesVegetarianFood:
-          type: boolean
-        servesWine:
-          type: boolean
-        takeout:
-          type: boolean
         userRatingsTotal:
           type: integer
           description: number of user userRatingsTotal
